# dsl-rs

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  codebase-review-report.md
.github/workflows/: test.yml
PRPs/: 00_robust_multistream_core.md  01_foundation_core.md  02_pipeline_management.md  03_sources_and_sinks.md  04_processing_components.md  05_inference_components.md  06_ode_services.md  07_display_types.md  08_automated_testing_framework.md  10_systematic_testing_framework.md  11_test_runner_script.md
examples/: README.md  robust_multistream.rs
scripts/: endurance_test.sh  requirements.txt  run_all_tests.ps1  run_all_tests.sh  test_runner.py  validate_components.py
scripts/configs/: test_matrix.yaml
scripts/configs/scenarios/: basic_pipeline.yaml  chaos_scenarios.yaml  multi_stream.yaml  performance_baseline.yaml  recovery_testing.yaml
scripts/lib/: __init__.py  config_generator.py  report_generator.py  test_executor.py
src/: lib.rs
src/core/: mod.rs
src/health/: health_monitor.rs  mod.rs
src/isolation/: mod.rs  stream_isolator.rs
src/pipeline/: mod.rs  robust_pipeline.rs
src/recovery/: mod.rs  recovery_manager.rs
src/sink/: file_sink_robust.rs  mod.rs  rtsp_sink_robust.rs
src/source/: file_source_robust.rs  mod.rs  rtsp_source_robust.rs
src/stream/: mod.rs  stream_manager.rs
tests/chaos/: network_failures.rs  resource_exhaustion.rs
tests/common/: mod.rs
tests/configurations/: matrix_tests.rs
tests/integration/: pipeline_tests.rs  recovery_tests.rs  source_sink_flow.rs
tests/performance/: benchmarks.rs
tests/unit/: mod.rs
